# speech-recognition-test

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  cv-valid-dev.csv  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  pull_request_template.md  task.md
asr/: Dockerfile  asr_api.py  cv-decode.py  models.py
backend/scripts/: create.sh
conf/base/: logging.yaml
elastic-backend/: create-index.sh  cv-index.py  docker-compose.yml
search-ui/: Dockerfile  README.md  docker-compose.yml
search-ui/src/: App.js
terraform/: main.tf  outputs.tf  variables.tf
utils/: logging.py
